--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* Styling and appearance of the website are the work of (0xR3TR0)[https://github.com/0xR3TRO]. Do not use without permission. */  
 /* Reset default margin, padding, and box-sizing for all elements */
 * {
     margin: 0;
